--- a/index.html
+++ b/index.html
@@ -4,8 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asignment 07 Array</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            font-size: 24px;
+            margin: 20px;
+            background: lightblue;
+        }
+    </style>
 </head>
 <body>
-    
+    <!-- Question 01 -->
+     =============Question 01=============
+     <h2>Student List</h2>
+  <p id="output"></p>
+  <br><br>
+  <!-- Question 02 -->
+=============Question 02=============
+<br>
+<h2>Fruits List</h2>
+<p> Check the consol </p>
+  <br><br>
+  <!-- Question 03 -->
+=============Question 03=============
+<br>
+<h2>Week Days</h2>
+<p> Check the consol </p>
+  <br><br>
+  <!-- Question 04 -->
+=============Question 04=============
+<br>
+<h2>Color List</h2>
+<p> Check the consol </p>
+  <br><br>
+  <!-- Question 04 -->
+=============Question 05=============
+<br>
+<h2>Subjects</h2>
+<p> Check the consol </p>
+  <br><br>
+  <!-- Question 04 -->
+=============Question 06=============
+<br>
+<h2>Pakistan's Popular Cities</h2>
+<p> Check the consol </p>
+
+    <script src="apps.js"></script>
 </body>
 </html>
