add some changes in index

--- a/index.html
+++ b/index.html
@@ -26,28 +26,12 @@
 <p> Check the consol </p>
   <br><br>
   <!-- Question 03 -->
-=============Question 03=============
+=============Question 03 to 20=============
 <br>
-<h2>Week Days</h2>
-<p> Check the consol </p>
+<h2>Check the Console Logs</h2>
+<p>From Question 03 to 20 all are only view able in console of this webpage</p>
   <br><br>
-  <!-- Question 04 -->
-=============Question 04=============
-<br>
-<h2>Color List</h2>
-<p> Check the consol </p>
-  <br><br>
-  <!-- Question 04 -->
-=============Question 05=============
-<br>
-<h2>Subjects</h2>
-<p> Check the consol </p>
-  <br><br>
-  <!-- Question 04 -->
-=============Question 06=============
-<br>
-<h2>Pakistan's Popular Cities</h2>
-<p> Check the consol </p>
+  <h3>Thank You</h3>
 
     <script src="apps.js"></script>
 </body>
